add handtrack for tracking hand and get coordinate hand stand

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@
 
     <canvas id="myCanvas" hidden="true" width="500" height="500"></canvas>
 
+    <!-- Load the handtrackjs model. -->
+
     <script src="http://localhost:3000/app.js"></script>
   </body>
 </html>
