--- a/public/handtrack.html
+++ b/public/handtrack.html
@@ -23,13 +23,13 @@
     <button onclick="startVideo();">Start stream</button>
     <button onclick="stopVideo();">Stop stream</button>
     <video id="myVideo" width="500" height="500"></video>
-    <canvas id="myCanvas" width="500" height="500" ></canvas>
+    <canvas id="myCanvas" width="500" height="500"></canvas>
     <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"
       integrity="sha256-bQmrZe4yPnQrLTY+1gYylfNMBuGfnT/HKsCGX+9Xuqo="
       crossorigin="anonymous"
     ></script>
-    <script src="http://localhost:3000/handtrack.js"></script>
+    <script src="http://localhost:3000/javascript/handtrack.js"></script>
   </body>
 </html>
